--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "three": "^0.163.0"
   },
   "browsersList": [
     "last 2 versions"
